ajout du formulaire d'inscription et de connexion

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -62,7 +62,7 @@
             {% else %}
                 <div class="flex items-center justify-center w-full h-16 mt-auto bg-gray-200">
                     <button class="py-2 px-4 rounded hover:bg-gray-300"><a href="{% url 'login' %}">Connexion</a></button>
-                    <button class="py-2 px-4 rounded hover:bg-gray-300"><a href="#">Inscription</a></button>
+                    <button class="py-2 px-4 rounded hover:bg-gray-300"><a href="{% url 'register' %}">Inscription</a></button>
                 </div>
             {% endif %}
         </div>
