--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -23,6 +23,7 @@
             <div class="mb-4">
                 <p>
                     Pas encore inscrit ?
+                    <a href="{% url 'register' %}" class="text-indigo-500">S'inscrire</a>
                 </p>
             </div>
         </form>
