--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -51,6 +51,18 @@
                         <span class="absolute top-0 left-0 w-2 h-2 mt-2 ml-2 bg-indigo-500 rounded-full"></span>
                     </a>
                 </div>
+                {% if user.is_authenticated %}
+                    {% if user.is_superuser %}
+                        <div class="flex flex-col items-center w-full mt-2 border-t border-gray-300">
+                            <a class="flex items-center w-full h-12 px-3 mt-2 rounded hover:bg-gray-300" href="{% url 'admin:index' %}">
+                                <svg class="w-6 h-6 stroke-current" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7v8a2 2 0 002 2h6M8 7V5a2 2 0 012-2h4.586a1 1 0 01.707.293l4.414 4.414a1 1 0 01.293.707V15a2 2 0 01-2 2h-2M8 7H6a2 2 0 00-2 2v10a2 2 0 002 2h8a2 2 0 002-2v-2" />
+                                </svg>
+                                <span class="ml-2 text-sm font-medium">Administration</span>
+                            </a>
+                        </div>
+                    {% endif %}
+                {% endif %}
             </div>
             {% if user.is_authenticated %}
                 <a class="text-lg flex items-center justify-center w-full h-16 mt-auto bg-gray-200 hover:bg-gray-300" href="#">
