changement dans les templates de l'app block content => block main modification de l'interface administrateur

--- a/app/templates/game.html
+++ b/app/templates/game.html
@@ -3,7 +3,7 @@
 
 {% block title %}Jeux{% endblock title %}
 
-{% block content %}
+{% block main %}
     <div class="w-full mx-auto">
         <h1 class="text-3xl font-semibold mb-6">Jeux Pokémon</h1>
         <ul class="w-full grid gap-4 sm:grid-cols-4 md:grid-cols-6 lg:grid-cols-8">
@@ -17,4 +17,4 @@
             {% endfor %}
         </ul>
     </div>
-{% endblock content %}
+{% endblock main %}
