--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -1,8 +1,8 @@
 <!Doctype html>
-<html lang="{{ LANGUAGE_CODE|default:"en-us" }}">
+<html lang="{{ LANGUAGE_CODE|default:"fr" }}">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0">
         <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
         <title>{% block title %}{% endblock title %}</title>
         {% block stylesheets %}{% endblock stylesheets %}
@@ -79,7 +79,7 @@
             {% endif %}
         </div>
         <div class="w-full m-5">
-            {% block content %}{% endblock content %}
+            {% block main %}{% endblock main %}
         </div>
     </body>
 </html>
