--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -2,7 +2,7 @@
 
 {% block title %}Login{% endblock title %}
 
-{% block content %}
+{% block main %}
     <div class="flex justify-center items-center p-20">
         <form method="post" class="w-full max-w-md p-6 bg-white rounded-lg shadow-md">
             <h1 class="text-gray-700 font-bold mb-2" style="font-size:30px;">Connexion</h1>
@@ -28,4 +28,4 @@
             </div>
         </form>
     </div>
-{% endblock content %}
+{% endblock main %}
