--- a/app/templates/nationalPokedex.html
+++ b/app/templates/nationalPokedex.html
@@ -11,9 +11,8 @@
     </style>
 {% endblock stylesheets %}
 
-{% block content %}
+{% block main %}
     <div class="w-full mx-auto">
-        <h1 class="text-3xl font-semibold mb-6">Pokédex</h1>
         <ul class="w-full grid gap-4 sm:grid-cols-4 md:grid-cols-6 lg:grid-cols-8">
             {% for pokemon in pokedex %}
                 <li class="bg-white p-4 shadow-md rounded-lg">
@@ -30,4 +29,4 @@
             {% endfor %}
         </ul>
     </div>
-{% endblock content %}
+{% endblock main %}
