--- a/app/templates/admin/login.html
+++ b/app/templates/admin/login.html
@@ -1,11 +1,13 @@
 {% extends "admin/base_site.html" %}
 {% load i18n static %}
 
-{% block extrastyle %}{{ block.super }}<link rel="stylesheet" href="{% static "admin/css/login.css" %}">
+{% block stylesheets %}
+{{ block.super }}
+<link rel="stylesheet" href="{% static "admin/css/login.css" %}">
 {{ form.media }}
 {% endblock %}
 
-{% block bodyclass %}{{ block.super }} login{% endblock %}
+{% block bodyclass %}{{ block.super }}login{% endblock %}
 
 {% block usertools %}{% endblock %}
 
