--- a/app/templates/pokedex.html
+++ b/app/templates/pokedex.html
@@ -11,9 +11,8 @@
     </style>
 {% endblock stylesheets %}
 
-{% block content %}
+{% block main %}
     <div class="w-full mx-auto">
-        <h1 class="text-3xl font-semibold mb-6">Pokédex de {{ game }}</h1>
         <ul class="grid gap-4 sm:grid-cols-4 md:grid-cols-6 lg:grid-cols-8">
             {% for pokemonInstance in game.pokemons.all %}
                 <li class="bg-white p-4 shadow-md rounded-lg">
@@ -30,4 +29,4 @@
             {% endfor %}
         </ul>
     </div>
-{% endblock content %}
+{% endblock main %}
