fin de la personnalisation de la partie admin TODO : réussir à afficher l'image contenu dans l'imageField d'un form admin d'update

--- a/app/templates/admin/app_list.html
+++ b/app/templates/admin/app_list.html
@@ -4,7 +4,7 @@
   {% for app in app_list %}
     <div class="app-{{ app.app_label }} module{% if app.app_url in request.path|urlencode %} current-app{% endif %}">
       <table>
-        <caption>
+        <caption class="w-full bg-gray-200 hover:bg-gray-300">
           <a href="{{ app.app_url }}" class="section" title="{% blocktranslate with name=app.name %}Models in the {{ name }} application{% endblocktranslate %}">{{ app.name }}</a>
         </caption>
         {% for model in app.models %}
