--- a/app/templates/admin/change_list.html
+++ b/app/templates/admin/change_list.html
@@ -1,7 +1,7 @@
 {% extends "admin/base_site.html" %}
 {% load i18n admin_urls static admin_list %}
 
-{% block extrastyle %}
+{% block stylesheets %}
   {{ block.super }}
   <link rel="stylesheet" href="{% static "admin/css/changelists.css" %}">
   {% if cl.formset %}
@@ -18,7 +18,7 @@
   {% endif %}
 {% endblock %}
 
-{% block extrahead %}
+{% block javascripts %}
 {{ block.super }}
 {{ media.js }}
 <script src="{% static 'admin/js/filters.js' %}" defer></script>
