--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -5,10 +5,24 @@
         <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0">
         <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
         <title>{% block title %}{% endblock title %}</title>
+        <style>
+            .fixed-sidebar {
+                position: fixed;
+                top: 0;
+                left: 0;
+                bottom: 0;
+                z-index: 1000;
+            }
+
+            .content-area {
+                margin-left: 16rem;
+            }
+        </style>
         {% block stylesheets %}{% endblock stylesheets %}
+        {% block javascripts %}{% endblock %}
     </head>
-    <body class="flex h-screen bg-gray-100 w-full">
-        <div class="flex flex-col items-center w-64 h-full overflow-hidden text-gray-700 bg-gray-100 rounded">
+    <body class="flex h-screen bg-gray-100 w-full {% block bodyclass %}{% endblock bodyclass %}">
+        <div class="flex flex-col items-center w-64 h-full overflow-hidden text-gray-700 bg-gray-100 rounded fixed-sidebar">
             <a class="flex items-center w-full px-3 mt-3" href="{% url 'index' %}">
                 <svg class="w-8 h-8 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
                     <path d="M11 17a1 1 0 001.447.894l4-2A1 1 0 0017 15V9.236a1 1 0 00-1.447-.894l-4 2a1 1 0 00-.553.894V17zM15.211 6.276a1 1 0 000-1.788l-4.764-2.382a1 1 0 00-.894 0L4.789 4.488a1 1 0 000 1.788l4.764 2.382a1 1 0 00.894 0l4.764-2.382zM4.447 8.342A1 1 0 003 9.236V15a1 1 0 00.553.894l4 2A1 1 0 009 17v-5.764a1 1 0 00-.553-.894l-4-2z" />
@@ -17,6 +31,12 @@
             </a>
             <div class="w-full px-2">
                 <div class="flex flex-col items-center w-full mt-3 border-t border-gray-300">
+                    <a class="flex items-center w-full h-12 px-3 mt-2 rounded hover:bg-gray-300" href="{% url 'national_pokedex' %}">
+                        <svg class="w-6 h-6 stroke-current" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7v8a2 2 0 002 2h6M8 7V5a2 2 0 012-2h4.586a1 1 0 01.707.293l4.414 4.414a1 1 0 01.293.707V15a2 2 0 01-2 2h-2M8 7H6a2 2 0 00-2 2v10a2 2 0 002 2h8a2 2 0 002-2v-2" />
+                        </svg>
+                        <span class="ml-2 text-sm font-medium">Pokédex National</span>
+                    </a>
                     <a class="flex items-center w-full h-12 px-3 mt-2 rounded hover:bg-gray-300" href="{% url 'games' %}">
                         <svg class="w-6 h-6 stroke-current" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" />
@@ -37,7 +57,7 @@
                         </svg>
                         <span class="ml-2 text-sm font-medium">Api</span>
                     </a>
-                    <a class="flex items-center w-full h-12 px-3 mt-2 rounded hover:bg-gray-300" href="#">
+                    <a class="flex items-center w-full h-12 px-3 mt-2 rounded hover:bg-gray-300" href="{% url 'settings' %}">
                         <svg class="w-6 h-6 stroke-current"  xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6V4m0 2a2 2 0 100 4m0-4a2 2 0 110 4m-6 8a2 2 0 100-4m0 4a2 2 0 110-4m0 4v2m0-6V4m6 6v10m6-2a2 2 0 100-4m0 4a2 2 0 110-4m0 4v2m0-6V4" />
                         </svg>
@@ -78,7 +98,7 @@
                 </div>
             {% endif %}
         </div>
-        <div class="w-full m-5">
+        <div class="w-full m-5 content-area">
             {% block main %}{% endblock main %}
         </div>
     </body>
