--- a/static/admin/css/base.css
+++ b/static/admin/css/base.css
@@ -55,6 +55,8 @@ html[data-theme="light"],
     --object-tools-bg: var(--close-button-bg);
     --object-tools-hover-bg: var(--close-button-hover-bg);
 
+    --selected-model: var(--breadcrumbs-fg);
+
     --font-family-primary:
         -apple-system,
         BlinkMacSystemFont,
@@ -122,7 +124,7 @@ a img {
 }
 
 a.section:link, a.section:visited {
-    color: var(--header-link-color);
+    color: var(--body-loud-color);
     text-decoration: none;
 }
 
@@ -560,7 +562,6 @@ input[type=button][disabled].default {
 .module {
     border: none;
     margin-bottom: 30px;
-    background: var(--body-bg);
 }
 
 .module p, .module ul, .module h3, .module h4, .module dl, .module pre {
@@ -586,8 +587,7 @@ input[type=button][disabled].default {
     font-weight: 400;
     font-size: 0.8125rem;
     text-align: left;
-    background: var(--primary);
-    color: var(--header-link-color);
+    color: var(--body-loud-color);
 }
 
 .module caption,
@@ -700,15 +700,16 @@ td ul.errorlist + input, td ul.errorlist + select, td ul.errorlist + textarea {
 /* BREADCRUMBS */
 
 div.breadcrumbs {
-    background: var(--breadcrumbs-bg);
     padding: 10px 40px;
+    margin-bottom: 10px;
     border: none;
-    color: var(--breadcrumbs-fg);
+    color: var(--body-loud-color);
     text-align: left;
+    background-color: var(--breadcrumbs-fg);
 }
 
 div.breadcrumbs a {
-    color: var(--breadcrumbs-link-fg);
+    color: var(--body-loud-color);
 }
 
 div.breadcrumbs a:focus, div.breadcrumbs a:hover {
@@ -1026,6 +1027,7 @@ a.deletelink:focus, a.deletelink:hover {
 #content-related .actionlist {
     padding: 0;
     margin: 16px;
+    overflow: hidden;
 }
 
 #content-related .actionlist li {
@@ -1035,7 +1037,6 @@ a.deletelink:focus, a.deletelink:hover {
 }
 
 #content-related .module h2 {
-    background: none;
     padding: 16px;
     margin-bottom: 16px;
     border-bottom: 1px solid var(--hairline-color);
