--- a/static/admin/css/nav_sidebar.css
+++ b/static/admin/css/nav_sidebar.css
@@ -19,6 +19,8 @@
     font-size: 1.25rem;
     color: var(--link-fg);
     padding: 0;
+    margin-right: 10px;
+    border-radius: 10px;
 }
 
 [dir="rtl"] .toggle-nav-sidebar {
@@ -36,9 +38,6 @@
     flex: 0 0 275px;
     left: -276px;
     margin-left: -276px;
-    border-top: 1px solid transparent;
-    border-right: 1px solid var(--hairline-color);
-    background-color: var(--body-bg);
     overflow: auto;
 }
 
@@ -94,12 +93,12 @@
 
 #nav-sidebar .current-app .section:link,
 #nav-sidebar .current-app .section:visited {
-    color: var(--header-color);
+    color: var(--body-loud-color);
     font-weight: bold;
 }
 
 #nav-sidebar .current-model {
-    background: var(--selected-row);
+    background: var(--selected-model);
 }
 
 .main > #nav-sidebar + .content {
