--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0">
-        <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+        <script src="https://cdn.tailwindcss.com"></script>
         <title>{% block title %}{% endblock title %}</title>
         <style>
             .fixed-sidebar {
@@ -98,7 +98,7 @@
                 </div>
             {% endif %}
         </div>
-        <div class="w-full m-5 content-area">
+        <div class="w-full content-area">
             {% block main %}{% endblock main %}
         </div>
     </body>
