--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!Doctype html>
 <html lang="{{ LANGUAGE_CODE|default:"fr" }}">
     <head>
@@ -15,14 +16,29 @@
             }
 
             .content-area {
-                margin-left: 16rem;
+                margin-left: 17rem;
             }
         </style>
         {% block stylesheets %}{% endblock stylesheets %}
         {% block javascripts %}{% endblock %}
     </head>
-    <body class="flex h-screen bg-gray-100 w-full {% block bodyclass %}{% endblock bodyclass %}">
-        <div class="flex flex-col items-center w-64 h-full overflow-hidden text-gray-700 bg-gray-100 rounded fixed-sidebar">
+    <body class="
+        flex h-screen bg-gray-100 w-full 
+        {% block bodyclass %}{% endblock bodyclass %}
+        {% if theme_value == 'dark' %}
+            bg-gray-800
+        {% else %}
+            bg-gray-100
+        {% endif %}
+    ">
+        <div class="
+            flex flex-col items-center w-64 h-full overflow-hidden  rounded fixed-sidebar 
+            {% if theme_value == 'dark' %}
+                bg-gray-900 text-white
+            {% else %}
+                text-gray-700 bg-gray-100
+            {% endif %}
+        ">
             <a class="flex items-center w-full px-3 mt-3" href="{% url 'index' %}">
                 <svg class="w-8 h-8 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
                     <path d="M11 17a1 1 0 001.447.894l4-2A1 1 0 0017 15V9.236a1 1 0 00-1.447-.894l-4 2a1 1 0 00-.553.894V17zM15.211 6.276a1 1 0 000-1.788l-4.764-2.382a1 1 0 00-.894 0L4.789 4.488a1 1 0 000 1.788l4.764 2.382a1 1 0 00.894 0l4.764-2.382zM4.447 8.342A1 1 0 003 9.236V15a1 1 0 00.553.894l4 2A1 1 0 009 17v-5.764a1 1 0 00-.553-.894l-4-2z" />
@@ -31,19 +47,40 @@
             </a>
             <div class="w-full px-2">
                 <div class="flex flex-col items-center w-full mt-3 border-t border-gray-300">
-                    <a class="flex items-center w-full h-12 px-3 mt-2 rounded hover:bg-gray-300" href="{% url 'national_pokedex' %}">
+                    <a class="
+                        flex items-center w-full h-12 px-3 mt-2 rounded
+                        {% if theme_value == 'dark' %}
+                            hover:bg-black
+                        {% else %}
+                            hover:bg-gray-300
+                        {% endif %}
+                    " href="{% url 'national_pokedex' %}">
                         <svg class="w-6 h-6 stroke-current" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7v8a2 2 0 002 2h6M8 7V5a2 2 0 012-2h4.586a1 1 0 01.707.293l4.414 4.414a1 1 0 01.293.707V15a2 2 0 01-2 2h-2M8 7H6a2 2 0 00-2 2v10a2 2 0 002 2h8a2 2 0 002-2v-2" />
                         </svg>
                         <span class="ml-2 text-sm font-medium">Pokédex National</span>
                     </a>
-                    <a class="flex items-center w-full h-12 px-3 mt-2 rounded hover:bg-gray-300" href="{% url 'games' %}">
+                    <a class="
+                        flex items-center w-full h-12 px-3 mt-2 rounded
+                        {% if theme_value == 'dark' %}
+                            hover:bg-black
+                        {% else %}
+                            hover:bg-gray-300
+                        {% endif %}
+                    " href="{% url 'games' %}">
                         <svg class="w-6 h-6 stroke-current" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" />
                         </svg>
                         <span class="ml-2 text-sm font-medium">Jeux</span>
                     </a>
-                    <a class="flex items-center w-full h-12 px-3 mt-2 rounded hover:bg-gray-300" href="#">
+                    <a class="
+                        flex items-center w-full h-12 px-3 mt-2 rounded
+                        {% if theme_value == 'dark' %}
+                            hover:bg-black
+                        {% else %}
+                            hover:bg-gray-300
+                        {% endif %}
+                    " href="#">
                         <svg class="w-6 h-6 stroke-current" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
                         </svg>
@@ -51,19 +88,40 @@
                     </a>
                 </div>
                 <div class="flex flex-col items-center w-full mt-2 border-t border-gray-300">
-                    <a class="flex items-center w-full h-12 px-3 mt-2 rounded hover:bg-gray-300" href="#">
+                    <a class="
+                        flex items-center w-full h-12 px-3 mt-2 rounded
+                        {% if theme_value == 'dark' %}
+                            hover:bg-black
+                        {% else %}
+                            hover:bg-gray-300
+                        {% endif %}
+                    " href="#">
                         <svg class="w-6 h-6 stroke-current" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7v8a2 2 0 002 2h6M8 7V5a2 2 0 012-2h4.586a1 1 0 01.707.293l4.414 4.414a1 1 0 01.293.707V15a2 2 0 01-2 2h-2M8 7H6a2 2 0 00-2 2v10a2 2 0 002 2h8a2 2 0 002-2v-2" />
                         </svg>
                         <span class="ml-2 text-sm font-medium">Api</span>
                     </a>
-                    <a class="flex items-center w-full h-12 px-3 mt-2 rounded hover:bg-gray-300" href="{% url 'settings' %}">
+                    <a class="
+                        flex items-center w-full h-12 px-3 mt-2 rounded
+                        {% if theme_value == 'dark' %}
+                            hover:bg-black
+                        {% else %}
+                            hover:bg-gray-300
+                        {% endif %}
+                    " href="{% url 'settings' %}">
                         <svg class="w-6 h-6 stroke-current"  xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6V4m0 2a2 2 0 100 4m0-4a2 2 0 110 4m-6 8a2 2 0 100-4m0 4a2 2 0 110-4m0 4v2m0-6V4m6 6v10m6-2a2 2 0 100-4m0 4a2 2 0 110-4m0 4v2m0-6V4" />
                         </svg>
                         <span class="ml-2 text-sm font-medium">Paramètres</span>
                     </a>
-                    <a class="relative flex items-center w-full h-12 px-3 mt-2 rounded hover:bg-gray-300" href="#">
+                    <a class="
+                        relative flex items-center w-full h-12 px-3 mt-2 rounded
+                        {% if theme_value == 'dark' %}
+                            hover:bg-black
+                        {% else %}
+                            hover:bg-gray-300
+                        {% endif %}
+                    " href="#">
                         <svg class="w-6 h-6 stroke-current" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 8h10M7 12h4m1 8l-4-4H5a2 2 0 01-2-2V6a2 2 0 012-2h14a2 2 0 012 2v8a2 2 0 01-2 2h-3l-4 4z" />
                         </svg>
@@ -74,7 +132,14 @@
                 {% if user.is_authenticated %}
                     {% if user.is_superuser %}
                         <div class="flex flex-col items-center w-full mt-2 border-t border-gray-300">
-                            <a class="flex items-center w-full h-12 px-3 mt-2 rounded hover:bg-gray-300" href="{% url 'admin:index' %}">
+                            <a class="
+                                flex items-center w-full h-12 px-3 mt-2 rounded
+                                {% if theme_value == 'dark' %}
+                                    hover:bg-black
+                                {% else %}
+                                    hover:bg-gray-300
+                                {% endif %}
+                            " href="{% url 'admin:index' %}">
                                 <svg class="w-6 h-6 stroke-current" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7v8a2 2 0 002 2h6M8 7V5a2 2 0 012-2h4.586a1 1 0 01.707.293l4.414 4.414a1 1 0 01.293.707V15a2 2 0 01-2 2h-2M8 7H6a2 2 0 00-2 2v10a2 2 0 002 2h8a2 2 0 002-2v-2" />
                                 </svg>
@@ -85,16 +150,43 @@
                 {% endif %}
             </div>
             {% if user.is_authenticated %}
-                <a class="text-lg flex items-center justify-center w-full h-16 mt-auto bg-gray-200 hover:bg-gray-300" href="#">
+                <a class="
+                    text-lg flex items-center justify-center w-full h-16 mt-auto 
+                    {% if theme_value == 'dark' %}
+                        bg-gray-900 hover:bg-black border-t
+                    {% else %}
+                        bg-gray-200 hover:bg-gray-300
+                    {% endif %}  
+                " href="#">
                     <svg class="w-6 h-6 stroke-current" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5.121 17.804A13.937 13.937 0 0112 16c2.5 0 4.847.655 6.879 1.804M15 10a3 3 0 11-6 0 3 3 0 016 0zm6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
                     </svg>
                     <span class="ml-2 font-medium">{{ user.username }}</span>
                 </a>
             {% else %}
-                <div class="flex items-center justify-center w-full h-16 mt-auto bg-gray-200">
-                    <button class="py-2 px-4 rounded hover:bg-gray-300"><a href="{% url 'login' %}">Connexion</a></button>
-                    <button class="py-2 px-4 rounded hover:bg-gray-300"><a href="{% url 'register' %}">Inscription</a></button>
+                <div class="
+                    flex items-center justify-center w-full h-16 mt-auto
+                    {% if theme_value == 'dark' %}
+                    {% else %}
+                        bg-gray-200
+                    {% endif %}
+                ">
+                    <button class="
+                        py-2 px-4 rounded 
+                        {% if theme_value == 'dark' %}
+                            hover:bg-black
+                        {% else %}
+                            hover:bg-gray-300
+                        {% endif %}
+                    "><a href="{% url 'login' %}">Connexion</a></button>
+                    <button class="
+                        py-2 px-4 rounded 
+                        {% if theme_value == 'dark' %}
+                            hover:bg-black
+                        {% else %}
+                            hover:bg-gray-300
+                        {% endif %}
+                    "><a href="{% url 'register' %}">Inscription</a></button>
                 </div>
             {% endif %}
         </div>
