--- a/app/templates/pokemon/nationalPokedex.html
+++ b/app/templates/pokemon/nationalPokedex.html
@@ -12,10 +12,17 @@
 {% endblock stylesheets %}
 
 {% block main %}
-    <div class="w-full mx-auto">
+    <div class="w-full mx-auto m-4">
         <ul class="w-full grid gap-4 sm:grid-cols-4 md:grid-cols-6 lg:grid-cols-8">
             {% for pokemon in pokedex %}
-                <li class="bg-white p-4 shadow-md rounded-lg">
+                <li class="
+                    p-4 shadow-md rounded-lg 
+                    {% if theme_value == 'dark' %}
+                        bg-gray-700 text-white
+                    {% else %}
+                        bg-white
+                    {% endif %}
+                ">
                     <h2 class="text-lg font-semibold">{{ pokemon.format_number }}</h2>
                     <img src="{{ pokemon.image.url }}" alt="Pokémon" class="w-full mb-2">
                     <h2 class="text-lg font-semibold">{{ pokemon.name }}</h2>
